test/invalid/interface_unfinished.d
//T error: interface_unfinished.d:5:0:
//T error: expected 'CloseBrace', got 'End'.

interface I {
